[package]
name = "ecdsa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
sha2 = "0.9.5"
num-traits = "0.2"
blake-hash = {version="0.4.0", optional=true}
rustc-hex = "1.0.0"
lazy_static = "1.4.0"
poseidon-rs = "0.0.8"

[features]
default = ["blake-hash"]
